--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -9,6 +9,38 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Utsav147/Google-Colab-TF-Practice/blob/main/Welcome_To_Colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hello\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GSU2ejsG01_Q",
+        "outputId": "400953c3-813e-410e-d7b4-4437840f9a55"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AhWOA8qo6org"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
