--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -35,9 +35,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy"
+      ],
       "metadata": {
         "id": "AhWOA8qo6org"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bHoytMXC7CTn"
       },
       "execution_count": null,
       "outputs": []
