--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -41,14 +41,38 @@
       "metadata": {
         "id": "AhWOA8qo6org"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "print(tf.version)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bHoytMXC7CTn",
+        "outputId": "f0aac83d-3fd6-4018-8e3b-a3e2b5945e61"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<module 'tensorflow._api.v2.version' from '/usr/local/lib/python3.12/dist-packages/tensorflow/_api/v2/version/__init__.py'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "bHoytMXC7CTn"
+        "id": "QrlHfcqO8Zjq"
       },
       "execution_count": null,
       "outputs": []
@@ -58,6 +82,7 @@
     "colab": {
       "name": "Welcome To Colab",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
