--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -70,9 +70,36 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "rank1_tensor=tf.Variable([[\"Test\",\"ok\"],[\"Test\",\"ok\"],[\"Test\",\"ok\"]],tf.string)\n",
+        "rank1_tensor.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QrlHfcqO8Zjq",
+        "outputId": "b55a632a-e5be-4641-e3b5-4428484797fb"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TensorShape([3, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "QrlHfcqO8Zjq"
+        "id": "IexWA4Nn_YMs"
       },
       "execution_count": null,
       "outputs": []
@@ -82,7 +109,6 @@
     "colab": {
       "name": "Welcome To Colab",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
