--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -54,6 +54,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "bHoytMXC7CTn",
         "outputId": "f0aac83d-3fd6-4018-8e3b-a3e2b5945e61"
       },
@@ -71,7 +72,7 @@
     {
       "cell_type": "code",
       "source": [
-        "rank1_tensor=tf.Variable([[\"Test\",\"ok\"],[\"Test\",\"ok\"],[\"Test\",\"ok\"]],tf.string)\n",
+        "rank1_tensor=tf.Variable([[[[[[[[\"Test\",\"ok\"],[\"Test\",\"ok\"],[\"Test\",\"ok\"]]]]]]]],tf.string)\n",
         "rank1_tensor.shape"
       ],
       "metadata": {
@@ -79,19 +80,196 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QrlHfcqO8Zjq",
-        "outputId": "b55a632a-e5be-4641-e3b5-4428484797fb"
+        "outputId": "ccea60f0-5d96-46aa-b1e5-5e5c8eb8ce01"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "TensorShape([3, 2])"
+              "TensorShape([1, 1, 1, 1, 1, 1, 3, 2])"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t=tf.zeros([5,5,5,5])\n",
+        "print(t)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IexWA4Nn_YMs",
+        "outputId": "d1d3c38a-6acd-4ba3-f321-24e060497b57"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[[[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]]\n",
+            "\n",
+            "\n",
+            " [[[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]]\n",
+            "\n",
+            "\n",
+            " [[[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]]\n",
+            "\n",
+            "\n",
+            " [[[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]]\n",
+            "\n",
+            "\n",
+            " [[[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]\n",
+            "\n",
+            "  [[0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]\n",
+            "   [0. 0. 0. 0. 0.]]]], shape=(5, 5, 5, 5), dtype=float32)\n"
+          ]
         }
       ]
     },
@@ -99,7 +277,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "IexWA4Nn_YMs"
+        "id": "pJVn16KjB8D6"
       },
       "execution_count": null,
       "outputs": []
