--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -20,9 +20,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GSU2ejsG01_Q",
-        "outputId": "400953c3-813e-410e-d7b4-4437840f9a55"
+        "outputId": "4394580c-4146-4bc3-f78e-a7a43100e71a"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -41,8 +41,35 @@
       "metadata": {
         "id": "AhWOA8qo6org"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e6f86efb",
+        "outputId": "fe8a4a53-0091-4aea-9117-d02f1349fd17"
+      },
+      "source": [
+        "try:\n",
+        "    import six\n",
+        "    print(\"The 'six' library is installed.\")\n",
+        "except ImportError:\n",
+        "    print(\"The 'six' library is not installed.\")"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The 'six' library is installed.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -56,9 +83,9 @@
         },
         "collapsed": true,
         "id": "bHoytMXC7CTn",
-        "outputId": "f0aac83d-3fd6-4018-8e3b-a3e2b5945e61"
+        "outputId": "058320f7-65ee-4a38-ce8b-7b505cfe4937"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,9 +107,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QrlHfcqO8Zjq",
-        "outputId": "ccea60f0-5d96-46aa-b1e5-5e5c8eb8ce01"
+        "outputId": "d8865384-303a-4fcb-fd30-43af29d410fa"
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,7 +119,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 4
         }
       ]
     },
@@ -100,184 +127,48 @@
       "cell_type": "code",
       "source": [
         "t=tf.zeros([5,5,5,5])\n",
-        "print(t)"
+        "# print(t)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IexWA4Nn_YMs",
-        "outputId": "d1d3c38a-6acd-4ba3-f321-24e060497b57"
+        "id": "IexWA4Nn_YMs"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sklearn as sc"
+      ],
+      "metadata": {
+        "id": "pJVn16KjB8D6"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from __future__ import absolute_import, division, print_function,unicode_literals\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from IPython.display import clear_output\n",
+        "import six.moves.urllib as urllib\n",
+        "import tensorflow.compat.v2.feature_column as fc\n",
+        "import tensorflow as tf"
+      ],
+      "metadata": {
+        "id": "2W-JTV4FGgZ-"
       },
       "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tf.Tensor(\n",
-            "[[[[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]]\n",
-            "\n",
-            "\n",
-            " [[[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]]\n",
-            "\n",
-            "\n",
-            " [[[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]]\n",
-            "\n",
-            "\n",
-            " [[[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]]\n",
-            "\n",
-            "\n",
-            " [[[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]\n",
-            "\n",
-            "  [[0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]\n",
-            "   [0. 0. 0. 0. 0.]]]], shape=(5, 5, 5, 5), dtype=float32)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "pJVn16KjB8D6"
+        "id": "jro4nwuxH3dl"
       },
       "execution_count": null,
       "outputs": []
