--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -166,7 +166,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import tensorflow_probability as tfp\n"
+      ],
       "metadata": {
         "id": "jro4nwuxH3dl"
       },
