--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -134,11 +134,11 @@
         "print(f\"Keras Version: {keras.__version__}\")"
       ],
       "metadata": {
-        "id": "DWv7ghSy6-ZQ",
-        "outputId": "f9fdb459-68b0-40fd-8f94-839ae07f54dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DWv7ghSy6-ZQ",
+        "outputId": "f9fdb459-68b0-40fd-8f94-839ae07f54dc"
       },
       "execution_count": 21,
       "outputs": [
@@ -219,11 +219,11 @@
         "print(df.describe())"
       ],
       "metadata": {
-        "id": "1h-CeESO8X2_",
-        "outputId": "f0b9fabc-6aaf-4f1c-dd49-4a0904a7f2ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1h-CeESO8X2_",
+        "outputId": "f0b9fabc-6aaf-4f1c-dd49-4a0904a7f2ed"
       },
       "execution_count": 22,
       "outputs": [
@@ -352,11 +352,11 @@
         "print(\"=\"*80)"
       ],
       "metadata": {
-        "id": "yu_KTxMw8hfZ",
-        "outputId": "87c7f29b-e0f3-48e7-c39a-795709bef1e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yu_KTxMw8hfZ",
+        "outputId": "87c7f29b-e0f3-48e7-c39a-795709bef1e4"
       },
       "execution_count": 23,
       "outputs": [
@@ -475,12 +475,12 @@
         "print(\"=\"*80)"
       ],
       "metadata": {
-        "id": "ycEYNCXT8jCc",
-        "outputId": "23600107-e78b-4d8c-b707-766e83a4eb64",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "ycEYNCXT8jCc",
+        "outputId": "23600107-e78b-4d8c-b707-766e83a4eb64"
       },
       "execution_count": 24,
       "outputs": [
@@ -848,11 +848,11 @@
         "print(\"=\"*80)"
       ],
       "metadata": {
-        "id": "6BFoq-Gi8oHV",
-        "outputId": "5234361c-f044-408e-c355-73672c8b9c87",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6BFoq-Gi8oHV",
+        "outputId": "5234361c-f044-408e-c355-73672c8b9c87"
       },
       "execution_count": 25,
       "outputs": [
@@ -923,11 +923,11 @@
         "print(\"\\n\" + \"=\"*80)"
       ],
       "metadata": {
-        "id": "7Hy6A9gH8t5N",
-        "outputId": "e38d9f08-ff50-4272-f66a-3b45bcc83c0c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7Hy6A9gH8t5N",
+        "outputId": "e38d9f08-ff50-4272-f66a-3b45bcc83c0c"
       },
       "execution_count": 26,
       "outputs": [
@@ -1000,11 +1000,11 @@
         "print(\"=\"*80)"
       ],
       "metadata": {
-        "id": "-TZFODpj8yXU",
-        "outputId": "5c3d2b38-0c11-4c33-b897-37fdc1821c54",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-TZFODpj8yXU",
+        "outputId": "5c3d2b38-0c11-4c33-b897-37fdc1821c54"
       },
       "execution_count": 27,
       "outputs": [
@@ -1067,7 +1067,56 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "from xgboost import XGBRegressor\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "\n",
+        "# Load dataset\n",
+        "df = pd.read_csv(\"weather.csv\")\n",
+        "\n",
+        "# Create lag features\n",
+        "def create_lag_features(data, col, lags=3):\n",
+        "    for i in range(1, lags + 1):\n",
+        "        data[f\"{col}_t-{i}\"] = data[col].shift(i)\n",
+        "    return data\n",
+        "\n",
+        "# Apply lagging on important features\n",
+        "for feature in ['temp', 'humidity', 'pressure', 'wind_speed']:\n",
+        "    df = create_lag_features(df, feature, lags=3)\n",
+        "\n",
+        "# Drop rows having NaN after lag\n",
+        "df = df.dropna()\n",
+        "\n",
+        "# Select features and target\n",
+        "X = df.drop(columns=['date', 'target_temp_next_day'])\n",
+        "y = df['target_temp_next_day']\n",
+        "\n",
+        "# Train-test split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False)\n",
+        "\n",
+        "# Build XGBoost model\n",
+        "model = XGBRegressor(\n",
+        "    n_estimators=300,\n",
+        "    learning_rate=0.05,\n",
+        "    max_depth=5,\n",
+        "    subsample=0.8,\n",
+        "    colsample_bytree=0.8\n",
+        ")\n",
+        "\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict and evaluate\n",
+        "y_pred = model.predict(X_test)\n",
+        "mae = mean_absolute_error(y_test, y_pred)\n",
+        "print(\"MAE:\", mae)\n",
+        "\n",
+        "# Predict next day's temperature\n",
+        "latest_row = X.tail(1)\n",
+        "next_temp = model.predict(latest_row)\n",
+        "print(\"Predicted next day temperature:\", next_temp[0])\n"
+      ],
       "metadata": {
         "id": "EISc2rV182cz"
       },
